Last Minute Bug Fixes